--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -54,12 +54,38 @@ table td
 <body>
 <h1>Table of Contents</h1>
 <ul>
+  <li><a href="#quintessence/AlphaMesh/AlphaMesh.q.yml">quintessence/AlphaMesh/AlphaMesh.q.yml</a></li>
   <li><a href="#quintessence/AlphaMesh/Game/Configurations/Main.q.yml">quintessence/AlphaMesh/Game/Configurations/Main.q.yml</a></li>
   <li><a href="#quintessence/AlphaMesh/GameProgressAndStateInfo.q.yml">quintessence/AlphaMesh/GameProgressAndStateInfo.q.yml</a></li>
   <li><a href="#quintessence/AlphaMesh/Gameplay/Level.q.yml">quintessence/AlphaMesh/Gameplay/Level.q.yml</a></li>
   <li><a href="#quintessence/AlphaMesh/Gameplay/Screen.q.yml">quintessence/AlphaMesh/Gameplay/Screen.q.yml</a></li>
 </ul>
 <h1>Components</h1>
+<br><br><br>
+<br><br><br>
+<ul>
+  <div class="component">
+    <h3 id="quintessence/AlphaMesh/AlphaMesh.q.yml">quintessence/AlphaMesh/AlphaMesh.q.yml</h3>
+    <p>(This component does not include supplementary documentation)</p>
+    <h3>Properties</h3>
+<p>This class contains no properties</p>    <h3>Methods</h3>
+<div class="property-box methods">     <table>
+<tr>
+  <td class="method">AllegroFlare::TileMaps::TileMap&lt;bool&gt;</td>
+  <td class="method"><b>process</b>(ALLEGRO_BITMAP* bitmap=nullptr, int num_rows=16, int num_columns=16)</td>
+</tr>
+    </table>
+</div>    <h3>Dependencies</h3>
+<div class="property-box dependencies">     <table>
+<tr>
+  <td class="dependency">{&quot;symbol&quot;=&gt;&quot;AllegroFlare::TileMaps::TileMap&quot;, &quot;headers&quot;=&gt;[&quot;AllegroFlare/TileMaps/TileMap.hpp&quot;]}</td>
+</tr>
+<tr>
+  <td class="dependency">{&quot;symbol&quot;=&gt;&quot;ALLEGRO_BITMAP&quot;, &quot;headers&quot;=&gt;[&quot;allegro5/allegro.h&quot;]}</td>
+</tr>
+    </table>
+</div>  </div>
+</ul>
 <br><br><br>
 <br><br><br>
 <ul>
@@ -485,6 +511,12 @@ table td
 <h1>Dependents</h1>
 <pre>
 {
+  "AllegroFlare/TileMaps/TileMap": [
+    "AlphaMesh/AlphaMesh"
+  ],
+  "ALLEGRO_BITMAP": [
+    "AlphaMesh/AlphaMesh"
+  ],
   "AllegroFlare/GameConfigurations/Complete": [
     "AlphaMesh/Game/Configurations/Main"
   ],
