--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -71,6 +71,10 @@ table td
 <p>This class contains no properties</p>    <h3>Methods</h3>
 <div class="property-box methods">     <table>
 <tr>
+  <td class="method">bool</td>
+  <td class="method"><b>area_contains_no_pixels</b>(ALLEGRO_BITMAP* bitmap=nullptr, int x=0, int y=0, int w=0, int h=0)</td>
+</tr>
+<tr>
   <td class="method">AllegroFlare::TileMaps::TileMap&lt;bool&gt;</td>
   <td class="method"><b>process</b>(ALLEGRO_BITMAP* bitmap=nullptr, int num_rows=16, int num_columns=16)</td>
 </tr>
