--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -82,11 +82,19 @@ table td
   <td class="property">int</td>
 </tr>
 <tr>
-  <td class="property">cell_width_in_pixels</td>
+  <td class="property">width</td>
+  <td class="property">int</td>
+</tr>
+<tr>
+  <td class="property">height</td>
+  <td class="property">int</td>
+</tr>
+<tr>
+  <td class="property">cell_width</td>
   <td class="property">float</td>
 </tr>
 <tr>
-  <td class="property">cell_height_in_pixels</td>
+  <td class="property">cell_height</td>
   <td class="property">float</td>
 </tr>
     </table>
