--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -66,8 +66,8 @@ table td
 <ul>
   <div class="component">
     <h3 id="quintessence/AlphaMesh/AlphaMesh.q.yml">quintessence/AlphaMesh/AlphaMesh.q.yml</h3>
-    <p>(This component does not include supplementary documentation)</p>
-    <h3>Properties</h3>
+    <h3>Overview</h3>
+    <p>{"todos"=>["next steps, add some functions same as assemble_quad that some vertex count optimization alternatives."]}</p>    <h3>Properties</h3>
 <div class="property-box properties">     <table>
 <tr>
   <td class="property">bitmap</td>
