--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -117,6 +117,10 @@ table td
   <td class="method"><b>build_mesh__run_length_encoding_by_rows</b>()</td>
 </tr>
 <tr>
+  <td class="method">std::vector&lt;ALLEGRO_VERTEX&gt;</td>
+  <td class="method"><b>build_mesh__run_length_encoding_by_columns</b>()</td>
+</tr>
+<tr>
   <td class="method">AllegroFlare::TileMaps::TileMap&lt;bool&gt;</td>
   <td class="method"><b>build_tile_mask</b>()</td>
 </tr>
