--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -59,6 +59,7 @@ table td
   <li><a href="#quintessence/AlphaMesh/GameProgressAndStateInfo.q.yml">quintessence/AlphaMesh/GameProgressAndStateInfo.q.yml</a></li>
   <li><a href="#quintessence/AlphaMesh/Gameplay/Level.q.yml">quintessence/AlphaMesh/Gameplay/Level.q.yml</a></li>
   <li><a href="#quintessence/AlphaMesh/Gameplay/Screen.q.yml">quintessence/AlphaMesh/Gameplay/Screen.q.yml</a></li>
+  <li><a href="#quintessence/AlphaMesh/Rectangle.q.yml">quintessence/AlphaMesh/Rectangle.q.yml</a></li>
 </ul>
 <h1>Components</h1>
 <br><br><br>
@@ -568,6 +569,41 @@ table td
 </tr>
     </table>
 </div>  </div>
+</ul>
+<br><br><br>
+<br><br><br>
+<ul>
+  <div class="component">
+    <h3 id="quintessence/AlphaMesh/Rectangle.q.yml">quintessence/AlphaMesh/Rectangle.q.yml</h3>
+    <p>(This component does not include supplementary documentation)</p>
+    <h3>Properties</h3>
+<div class="property-box properties">     <table>
+<tr>
+  <td class="property">x1</td>
+  <td class="property">int</td>
+</tr>
+<tr>
+  <td class="property">y1</td>
+  <td class="property">int</td>
+</tr>
+<tr>
+  <td class="property">x2</td>
+  <td class="property">int</td>
+</tr>
+<tr>
+  <td class="property">y2</td>
+  <td class="property">int</td>
+</tr>
+    </table>
+</div>    <h3>Methods</h3>
+<div class="property-box methods">     <table>
+<tr>
+  <td class="method">std::string</td>
+  <td class="method"><b>run</b>()</td>
+</tr>
+    </table>
+</div>    <h3>Dependencies</h3>
+<p>This class contains no dependencies</p>  </div>
 </ul>
 <h1>Dependents</h1>
 <pre>
