--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -130,6 +130,10 @@ table td
   <td class="method"><b>build_mesh__collapse_columns_rows</b>()</td>
 </tr>
 <tr>
+  <td class="method">std::vector&lt;ALLEGRO_VERTEX&gt;</td>
+  <td class="method"><b>build_mesh__collapse_rows_columns</b>()</td>
+</tr>
+<tr>
   <td class="method">AllegroFlare::TileMaps::TileMap&lt;bool&gt;</td>
   <td class="method"><b>build_tile_mask</b>()</td>
 </tr>
