--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -110,6 +110,10 @@ table td
   <td class="method"><b>all_cells_directly_below_are_solid</b>(int rect_row1=0, int rect_column1=0, int rect_row2=0, int rect_column2=0, AllegroFlare::TileMaps::TileMap&lt;bool&gt;* tile_mask=nullptr)</td>
 </tr>
 <tr>
+  <td class="method">bool</td>
+  <td class="method"><b>all_cells_directly_right_are_solid</b>(int rect_row1=0, int rect_column1=0, int rect_row2=0, int rect_column2=0, AllegroFlare::TileMaps::TileMap&lt;bool&gt;* tile_mask=nullptr)</td>
+</tr>
+<tr>
   <td class="method">std::vector&lt;ALLEGRO_VERTEX&gt;</td>
   <td class="method"><b>assemble_quad</b>(float x=0, float y=0, float x2=0, float y2=0)</td>
 </tr>
