* Add (untested) algorithm for #find_rectangles#

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -138,6 +138,10 @@ table td
   <td class="method"><b>build_mesh__collapse_rows_columns</b>()</td>
 </tr>
 <tr>
+  <td class="method">std::vector&lt;::AlphaMesh::Rectangle&gt;</td>
+  <td class="method"><b>find_rectangles</b>()</td>
+</tr>
+<tr>
   <td class="method">AllegroFlare::TileMaps::TileMap&lt;bool&gt;</td>
   <td class="method"><b>build_tile_mask</b>()</td>
 </tr>
@@ -152,6 +156,9 @@ table td
 </tr>
 <tr>
   <td class="dependency">{&quot;symbol&quot;=&gt;&quot;ALLEGRO_VERTEX&quot;, &quot;headers&quot;=&gt;[&quot;allegro5/allegro_primitives.h&quot;]}</td>
+</tr>
+<tr>
+  <td class="dependency">{&quot;symbol&quot;=&gt;:&quot;:AlphaMesh::Rectangle&quot;, &quot;headers&quot;=&gt;[&quot;AlphaMesh/Rectangle.hpp&quot;]}</td>
 </tr>
     </table>
 </div>  </div>
@@ -623,6 +630,9 @@ table td
     "AlphaMesh/AlphaMesh"
   ],
   "ALLEGRO_VERTEX": [
+    "AlphaMesh/AlphaMesh"
+  ],
+  ":AlphaMesh/Rectangle": [
     "AlphaMesh/AlphaMesh"
   ],
   "AllegroFlare/GameConfigurations/Complete": [
